Added a new bullet point.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <li>White background</li>
       <li>Black text</li>
       <li>Fast loading</li>
+      <li>Mobile-friendly</li>
       <li>Timeless design</li>
       <li>Single page</li>
     </ul>
