--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
     Duis aute irure dolor in reprehenderit in voluptate velit esse
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+    <footer class="site-footer">
+      <p>Copyright &copy; 2016 - Not really, but we need footer text.</p>
+    </footer>
+
   </div>
         
 </body>
