--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
 <body>
 
   <div class="wrapper">
-    <h1>The Most Advanced Website Ever</h1>
+    <h1>The Most Advanced Dog Ever</h1>
 
     <ul>
-      <li>White background</li>
-      <li>Black text</li>
-      <li>Fast loading</li>
-      <li>Mobile-friendly</li>
-      <li>Timeless design</li>
+      <li>Barks loudly</li>
+      <li>Eats a lot of food</li>
+      <li>Is very loyal</li>
     </ul>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
